fix cart title and various spacing

--- a/source/stylesheets/cart.sass
+++ b/source/stylesheets/cart.sass
@@ -5,6 +5,12 @@
     .secondary-header, .primary-header
       display: none
 
+.cart-page-title
+  font-size: 32px
+  
+  @media screen and (max-width: $break-small)
+    font-size: 24px
+    
 .cart-holder
   background-color: inherit
   height: auto
@@ -30,7 +36,7 @@
     font-size: 40px
     
 .cart-content
-  margin: 0 auto
+  margin: 32px auto
   max-width: 800px
   width: 100%
 
@@ -43,7 +49,7 @@
   +align-items(center)
   border-top: 1px solid $button-background-color
   font-size: 16px
-  padding: 20px 0
+  padding: 24px 0
   
   @media screen and (max-width: $break-small)
     +flex-wrap(wrap)
@@ -56,6 +62,7 @@
     +flex-basis(80%)
   
 .item-details
+  line-height: 1.4em
   padding: 0 24px
   
 .item-quantity-holder
